--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Atividade 1</h1>
     <div class="centralizar">
         <div class="digimon">
-            <p>Os digimons são monstros digitais criados na net. Eles são gerenciados pelo servidor conhecido com "Ygddrasill", sendo que esse mundo foi criado por humanos, mas somente após de um tempo se foi descoberta a vida digital</p>
+            <p>Os digimons são monstros digitais criados na net. Eles são gerenciados pelo servidor conhecido com "Ygddrasill", sendo que esse mundo foi criado por humanos, mas somente após de um tempo se foi descoberta a vida digital. Os digimons são separados em 4 tipos: Neutro, Vacina, Vírus e Data. Cada tipo tem uma compatibilidade, Vírus toma 2x de Vacina, Vacina toma 2x de Data, Data toma 2x de Vírus e Neutro toma 1x de todo mundo. Dentre as facções do DigiMundo a mais forte são os Cavaleiros Reais, comandados diretamente pela  Ygddrasill</p>
         </div>
         <div class="fate">
-            <p>O nasuverso criado por Kinoko Nasu foi um fenômeno de várias obras que podem ou não ser extremamente complicadas e divertidas de se compreender</p>
+            <p>O nasuverso criado por Kinoko Nasu foi um fenômeno de várias obras que podem ou não ser extremamente complicadas e divertidas de se compreender. O protagonista da obra "Fate Stay/Night" se chama Shirou Emiya, um jovem que 10 anos antes da história acabou sendo o único sobrevivente de um incêndio que ocorreu em sua cidade, no incêndio Shirou perdeu todas as sua memórias sendo a única que restou sendo o seu nome 'Shirou'. Por ter ignorado as pessoas clamando por ajuda, ele sofer culpa do sobrevivente, só consequindo sentir felicidade nos outros, quer saber mais? Vá ler a wiki.</p>
         </div>
         <div class="DB">
             <p>Dragon Ball é uma franquia de anime, mangá, e jogos japôneses criada por Akira Toriyama que também ajudou a criar outros franquias, como dragon quest</p>
