--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <p>O nasuverso criado por Kinoko Nasu foi um fenômeno de várias obras que podem ou não ser extremamente complicadas e divertidas de se compreender. O protagonista da obra "Fate Stay/Night" se chama Shirou Emiya, um jovem que 10 anos antes da história acabou sendo o único sobrevivente de um incêndio que ocorreu em sua cidade, no incêndio Shirou perdeu todas as sua memórias sendo a única que restou sendo o seu nome 'Shirou'. Por ter ignorado as pessoas clamando por ajuda, ele sofer culpa do sobrevivente, só consequindo sentir felicidade nos outros, quer saber mais? Vá ler a wiki.</p>
         </div>
         <div class="DB">
-            <p>Dragon Ball é uma franquia de anime, mangá, e jogos japôneses criada por Akira Toriyama que também ajudou a criar outros franquias, como dragon quest</p>
+            <p>Dragon Ball é uma franquia de anime, mangá, e jogos japôneses criada por Akira Toriyama que também ajudou a criar outros franquias, como dragon quest. O protagonis é Son Goku, um garoto com rado de macaco que vive nas montanhas com seu avô Gohan. A história tem várias sequências sendo elas: Dragon Ball Z, Dragon Ball Super e não canônicamente, Dragon Ball GT. A tranformação de son goku mas querida pelos fãs fica entre o instinto superior completo e o super saiyajin 4. E já que eu sou clubista eu digo que a melhor é o SSJ 4, quem não concorda tá errado.</p>
         </div>
-        <div class="flash">
-            <p>A série 'flash' foi criada por uma empresa americana, adaptando os quadrinhos de mesmo nome da dc para as tv's do mundo inteiro</p>
+        <div class="HSR">
+            <p>Honkai Star Rail é um jogo criado pela impresa chinesa Mihoyo, a mesma criadora de Honkai Impact 3rd, Gun Girls Z e Genshin Impact. O jogo se ambienta no espaço, sendo o protagonista um 'recipiente' para o vírus de todos os mundos, o <strong>Stellaron</strong>. A viagem se desenvolve por vários planetas em busca de saber porque o stellaron está selado no protagonista e tambem descobrir os mistérios dos Aeons, os deuses desse universo que cada um representa um caminho, sendo eles: A preservação, a destruição, a caça, a erudição, a harmonia, a inesistência e a abundância.</p>
         </div>
     </div>
 </body>
